# rust_dockerfile_generator

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: release.yml
src/: dockerfiles.rs  generate.rs  generator_settings.rs  main.rs  template_parser.rs  utils.rs
