[package]
name = "dockerfile_generator"
description = "Dockerfile generation with handlebar-templates"
version = "0.1.2"
authors = ["Christian Rodriguez Benthake <git@cben.co>"]
homepage = "https://cben.dev"
repository = "https://github.com/ChrisB9/rust_dockerfile_generator"
license = "MIT"
edition = "2018"
keywords = ["cli", "dockerfile", "templating"]
categories = ["command-line-utilities"]

[dependencies]
tinytemplate = "1.0"
handlebars = "3.5.2"
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
failure = "0.1.8"
failure_derive = "0.1.8"
seahorse = "^1.1"
terminal_color_builder = "0.1.1"
config = "^0.10"